--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@vitejs/plugin-react": "^3.1.0",
 		"babel-jest": "^29.6.0",
 		"cloudinary": "^1.37.3",
+		"dotenv": "^16.3.1",
 		"jest": "^29.6.0",
 		"jest-environment-jsdom": "^29.6.0",
 		"vite": "^4.2.0",
